--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,6 +11,11 @@ permissions:
 jobs:
   release:
     runs-on: macos-latest
+    outputs:
+      version: ${{ steps.version.outputs.VERSION }}
+      arm64_sonoma_sha: ${{ steps.bottle_sha.outputs.ARM64_SONOMA_SHA }}
+      arm64_monterey_sha: ${{ steps.bottle_sha.outputs.ARM64_MONTEREY_SHA }}
+      x86_64_sonoma_sha: ${{ steps.bottle_sha.outputs.X86_64_SONOMA_SHA }}
 
     steps:
       - name: Checkout code
@@ -32,6 +37,44 @@ jobs:
           tar -czf skipboi-macos.tar.gz skipboi
           shasum -a 256 skipboi-macos.tar.gz > skipboi-macos.tar.gz.sha256
 
+      - name: Create Homebrew Bottle
+        run: |
+          VERSION=${GITHUB_REF#refs/tags/}
+          # Create a bottle structure that Homebrew expects
+          mkdir -p bottle-staging/skipboi/$VERSION/bin
+          cp .build/release/skipboi bottle-staging/skipboi/$VERSION/bin/
+          
+          # Create the bottle tarball
+          cd bottle-staging
+          tar -czf ../skipboi-$VERSION.arm64_sonoma.bottle.tar.gz .
+          cd ..
+          
+          # Calculate bottle SHA256
+          shasum -a 256 skipboi-$VERSION.arm64_sonoma.bottle.tar.gz > skipboi-$VERSION.arm64_sonoma.bottle.tar.gz.sha256
+          
+          # Also create a bottle for monterey (same binary, different name for compatibility)
+          cp skipboi-$VERSION.arm64_sonoma.bottle.tar.gz skipboi-$VERSION.arm64_monterey.bottle.tar.gz
+          shasum -a 256 skipboi-$VERSION.arm64_monterey.bottle.tar.gz > skipboi-$VERSION.arm64_monterey.bottle.tar.gz.sha256
+          
+          # Create bottle for x86_64 (Intel Macs) - same binary works for both architectures
+          cp skipboi-$VERSION.arm64_sonoma.bottle.tar.gz skipboi-$VERSION.x86_64_sonoma.bottle.tar.gz
+          shasum -a 256 skipboi-$VERSION.x86_64_sonoma.bottle.tar.gz > skipboi-$VERSION.x86_64_sonoma.bottle.tar.gz.sha256
+
+      - name: Calculate bottle SHA256s
+        id: bottle_sha
+        run: |
+          VERSION=${GITHUB_REF#refs/tags/}
+          
+          # Calculate SHA256 for each bottle file we just created
+          ARM64_SONOMA_SHA=$(shasum -a 256 skipboi-${VERSION}.arm64_sonoma.bottle.tar.gz | awk '{print $1}')
+          echo "ARM64_SONOMA_SHA=${ARM64_SONOMA_SHA}" >> $GITHUB_OUTPUT
+          
+          ARM64_MONTEREY_SHA=$(shasum -a 256 skipboi-${VERSION}.arm64_monterey.bottle.tar.gz | awk '{print $1}')
+          echo "ARM64_MONTEREY_SHA=${ARM64_MONTEREY_SHA}" >> $GITHUB_OUTPUT
+          
+          X86_64_SONOMA_SHA=$(shasum -a 256 skipboi-${VERSION}.x86_64_sonoma.bottle.tar.gz | awk '{print $1}')
+          echo "X86_64_SONOMA_SHA=${X86_64_SONOMA_SHA}" >> $GITHUB_OUTPUT
+
       - name: Extract version
         id: version
         run: echo "VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
@@ -42,10 +85,16 @@ jobs:
           files: |
             .build/release/skipboi-macos.tar.gz
             .build/release/skipboi-macos.tar.gz.sha256
+            skipboi-${{ steps.version.outputs.VERSION }}.arm64_sonoma.bottle.tar.gz
+            skipboi-${{ steps.version.outputs.VERSION }}.arm64_sonoma.bottle.tar.gz.sha256
+            skipboi-${{ steps.version.outputs.VERSION }}.arm64_monterey.bottle.tar.gz
+            skipboi-${{ steps.version.outputs.VERSION }}.arm64_monterey.bottle.tar.gz.sha256
+            skipboi-${{ steps.version.outputs.VERSION }}.x86_64_sonoma.bottle.tar.gz
+            skipboi-${{ steps.version.outputs.VERSION }}.x86_64_sonoma.bottle.tar.gz.sha256
           body: |
             ## Installation
 
-            ### Homebrew
+            ### Homebrew (Recommended)
             ```bash
             brew tap IanKnighton/homebrew-tap
             brew install skipboi
@@ -55,6 +104,8 @@ jobs:
             ```bash
             brew upgrade skipboi
             ```
+
+            **Note:** This release includes Homebrew bottles for faster installation without compilation.
 
             ### Manual Installation
             ```bash
@@ -86,7 +137,7 @@ jobs:
 
       - name: Extract version
         id: version
-        run: echo "VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
+        run: echo "VERSION=${{ needs.release.outputs.version }}" >> $GITHUB_OUTPUT
 
       - name: Download and calculate SHA256
         id: sha
@@ -100,13 +151,18 @@ jobs:
 
       - name: Update Homebrew Formula
         run: |
-          VERSION="${{ steps.version.outputs.VERSION }}"
+          VERSION="${{ needs.release.outputs.version }}"
           SHA256="${{ steps.sha.outputs.SHA256 }}"
           TARBALL_URL="https://github.com/IanKnighton/skipboi/archive/refs/tags/${VERSION}.tar.gz"
+          
+          # Bottle SHA256s from release job outputs
+          ARM64_SONOMA_SHA="${{ needs.release.outputs.arm64_sonoma_sha }}"
+          ARM64_MONTEREY_SHA="${{ needs.release.outputs.arm64_monterey_sha }}"
+          X86_64_SONOMA_SHA="${{ needs.release.outputs.x86_64_sonoma_sha }}"
 
           cd homebrew-tap
           mkdir -p Formula
-
+          
           if [ ! -f Formula/skipboi.rb ]; then
             # Create initial formula if it doesn't exist
             cat > Formula/skipboi.rb << EOF
@@ -116,6 +172,12 @@ jobs:
             url "${TARBALL_URL}"
             sha256 "${SHA256}"
             license "MIT"
+
+            bottle do
+              sha256 cellar: :any_skip_relocation, arm64_sonoma:   "${ARM64_SONOMA_SHA}"
+              sha256 cellar: :any_skip_relocation, arm64_monterey: "${ARM64_MONTEREY_SHA}"
+              sha256 cellar: :any_skip_relocation, x86_64_sonoma:  "${X86_64_SONOMA_SHA}"
+            end
 
             depends_on xcode: ["12.0", :build]
             depends_on :macos
@@ -137,6 +199,14 @@ jobs:
             # Update existing formula
             sed -i '' "s|url \".*\"|url \"${TARBALL_URL}\"|" Formula/skipboi.rb
             sed -i '' "s|sha256 \".*\"|sha256 \"${SHA256}\"|" Formula/skipboi.rb
+            
+            # Update bottle block
+            sed -i '' "/bottle do/,/end/c\\
+          bottle do\\
+            sha256 cellar: :any_skip_relocation, arm64_sonoma:   \"${ARM64_SONOMA_SHA}\"\\
+            sha256 cellar: :any_skip_relocation, arm64_monterey: \"${ARM64_MONTEREY_SHA}\"\\
+            sha256 cellar: :any_skip_relocation, x86_64_sonoma:  \"${X86_64_SONOMA_SHA}\"\\
+          end" Formula/skipboi.rb
           fi
 
       - name: Commit and push changes
@@ -148,7 +218,7 @@ jobs:
           if git diff-index --quiet HEAD; then
             echo "No changes to commit"
           else
-            VERSION="${{ steps.version.outputs.VERSION }}"
+            VERSION="${{ needs.release.outputs.version }}"
             git commit -m "Update skipboi formula to ${VERSION}"
             git push origin main
           fi
